cluster/flux-system/webhook-receiver/virtualservice.yaml
# Used to enable webhook-receivers https://toolkit.fluxcd.io/guides/webhook-receivers/
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
spec:
  hosts:
    - 'receiver.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: webhook-receiver.flux-system.svc.cluster.local
          weight: 100
